# namma-dsl

./: .gitignore  Jenkinsfile  README.md  cabal.project  flake.nix  ny-example.cabal
lib/namma-dsl/: namma-dsl.cabal  package.yaml
lib/namma-dsl/src/NammaDSL/: AccessorTH.hs  App.hs  Config.hs  GeneratorCore.hs  Lib.hs  Types.hs  Utils.hs
lib/namma-dsl/src/NammaDSL/DSL/Parser/: API.hs  Storage.hs  TechDesign.hs
lib/namma-dsl/src/NammaDSL/DSL/Syntax/: API.hs  Common.hs  Storage.hs  TechDesign.hs
lib/namma-dsl/src/NammaDSL/Generator/: Haskell.hs  Purs.hs  SQL.hs
lib/namma-dsl/src/NammaDSL/Generator/Haskell/: ApiTypes.hs  BeamQueries.hs  BeamTable.hs  CachedQueries.hs  Common.hs  ConfigPilot.hs  DomainHandler.hs  DomainType.hs  Servant.hs  ServantTree.hs
lib/namma-dsl/src/NammaDSL/Lib/: Extractor.hs  Interpreter.hs  MapName.hs  TH.hs  Types.hs
lib/namma-dsl/tests/: Main.hs  api.yaml  dashboard-api.yaml  dsl-config.dhall  frontend-config.dhall  frontend.yaml  purs.yaml  pursfrontend.yaml  storage.yaml  storageTest.yaml  tech-design-config.dhall  tech-design.yaml
lib/namma-dsl/tests/src-read-only/migrations/: estimate_1.sql
lib/namma-dsl/tests/src-read-only/migrations2/: estimate_1.sql
lsp/: README.md  package-lock.json  package.json  tsconfig.json
lsp/client/: package-lock.json  package.json
lsp/client/src/: extension.ts
lsp/server/: package-lock.json  package.json
lsp/server/src/: Utils.ts  server.ts
lsp/server/src/Validations/Api/: validation.ts
lsp/server/src/Validations/Storage/: validation.ts
src/: Main.hs
(+26 files in other folders)
