cabal-version:   3.0
name:            ny-example
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable ny-example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, rider-app, euler-hs
    hs-source-dirs:   src
    default-language: Haskell2010
